--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,10 +4,96 @@
     box-sizing: border-box;
 }
 
-body {
-    font: 13px Helvetica, Arial; 
+#pWelcomTitle {
+     font: 16px Arial;
+     font-weight: bold;
+ }
+
+nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; 
+    background-color: #363636;
+    
 }
 
+nav li {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 14px;
+    padding: 0px 20px 0px 20px;
+    float: left;
+    color: white;
+}
+
+nav li a {
+    display: block;
+    color: white;
+    text-align: center;
+    
+    text-decoration: none;
+}
+
+nav li a:hover {
+    background-color: #1ba364
+}
+
+aside {
+    width: 20%;
+    height: 100vh;
+    background-color: #999999;
+    float: left;
+}
+aside label {
+    font-size: 12px;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+}
+
+aside ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden; 
+    /*background-color: #363636;*/
+}
+aside li {
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 12px;
+    padding: 0px 0px 0px 0px;
+    color: white;
+}
+
+
+aside li a {
+    display: block;
+    color: white;
+    text-align: left;
+    text-decoration: none;
+}
+
+aside li a:hover {
+    background-color: #1ba364
+}
+
+
+section {
+    width:80%;
+    height: 100vh;
+    background-color: yellowgreen;
+    float: right;
+}
+
+footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 20px;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 10;
+    background-color:#363636;
+}
+/*
 form {
     background: #000;
     padding: 3px;
@@ -41,4 +127,4 @@ form button {
 
 #messages li:nth-child(odd) {
     background: #eee;
-}
+}*/
