--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4,11 +4,32 @@
     box-sizing: border-box;
 }
 
-#pWelcomTitle {
-     font: 16px Arial;
-     font-weight: bold;
- }
+::-webkit-scrollbar{
+    width:5px;
+    height: 5px;
+}
 
+::-webkit-scrollbar-track {
+    background: white; 
+}
+
+::-webkit-scrollbar-thumb {
+    background: #99dfbe; 
+}
+  
+::-webkit-scrollbar-thumb:hover {
+    background: #1ba364; 
+}
+
+header {
+    height: 2px;
+    vertical-align: middle;
+    background-color: #1ba364
+}
+
+nav {
+    height: 18px;
+}
 nav ul {
     list-style-type: none;
     margin: 0;
@@ -20,7 +41,7 @@ nav ul {
 
 nav li {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 14px;
+    font-size: 16px;
     padding: 0px 20px 0px 20px;
     float: left;
     color: white;
@@ -40,7 +61,7 @@ nav li a:hover {
 
 aside {
     width: 20%;
-    height: 100vh;
+    height: calc(100vh - 30px);
     background-color: #999999;
     float: left;
 }
@@ -79,20 +100,60 @@ aside li a:hover {
 
 section {
     width:80%;
-    height: 100vh;
-    background-color: yellowgreen;
+    height: calc(100vh - 30px);
     float: right;
+    background-color: white;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    font-size: 12px;
+}
+
+section article.videoElements {
+    background-color: white;
+    height: 40%;
+    scroll-behavior: smooth;
+    overflow: auto;
+    white-space: nowrap;
+}
+
+section video {
+    width: auto;
+    height: calc(100% - 5px);
+    display: inline;
+}
+
+section article.textChat {
+    background-color: yellow;
+    height: 45%;
+    overflow-y: auto;
+    scroll-behavior: smooth;
+}
+
+section article.textChat p {
+    color: blue;
+}
+
+section article.textChat p.local {
+    text-align: right;
+    color: black;
+}
+
+section article.sharedFiles{
+    background-color: orangered;
+    height: 15%;
 }
 
 footer {
     position: fixed;
+    margin: 0;
+    padding: 0;
     bottom: 0;
     width: 100%;
-    height: 20px;
+    height: 10px;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 10;
-    background-color:#363636;
-}
+    font-size: 8px;
+    background-color:#1ba364;
+    color:white;
+    text-align: right;
 /*
 form {
     background: #000;
