--- a/public/css/app.css
+++ b/public/css/app.css
@@ -164,24 +164,55 @@ section article.textInput{
 }
 
 section article.textInput textarea{
-    
     width: 90%;
-    height: 100%;
+    height: calc(100% - 2px);
     resize: none;
-    border: 0 none #FFF;
-    background-color: white;
-    box-sizing: border-box;
+    outline: none;
+    border: none;
+    border-color: #1ba364;
+    background-color: #00000000;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10pt;
+    margin: 0;
+    padding: 0;
+    outline-color: transparent;
+    outline-style: none;
 }
 
-section article.textInput textarea:focus{
-    border: 0 none #FFF;
-    box-sizing: border-box;
+section article.textInput textarea:focus {
+    outline: none;
+    border:  none;
+    margin: 0;
+    padding: 0;
+    outline-color: transparent;
+    outline-style: none;
 }
 
 section article.textInput button{
     float: right;
     width:10%;
     height: 100%;
+    background-color: #999999;
+    border:none;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    -webkit-transition-duration: 0.4s;
+    transition-duration: 0.4s;
+    color: white;
+    outline: none;
+}
+
+section article.textInput button:hover {
+    background-color: #1ba364;
+    color:white;
+    outline: none;
+}
+
+section article.textInput button:focus {
+    background-color: #1ba364;
+    color:white;
+    outline: none;
 }
 
 footer {
