--- a/public/css/app.css
+++ b/public/css/app.css
@@ -41,7 +41,7 @@ nav ul {
 
 nav li {
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 16px;
+    font-size: 14px;
     padding: 0px 20px 0px 20px;
     float: left;
     color: white;
@@ -157,6 +157,18 @@ section article.textChat p.local {
     text-align: right;
     color: black;
     padding: 0px 5px 0 40%;
+}
+
+section article.textChat p.system {
+    width:100%;
+    font-size:11pt; 
+    color:#1ba364; 
+    text-align: center;
+}
+
+section article.textChat p.systemLabel {
+    color: #1ba364;
+    text-align: center;
 }
 
 section article.textInput{
